<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/colorLightGray"
    tools:context="website.suggestion.littlehelper.MainActivity">

    <EditText
        android:id="@+id/messageEditText"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_margin="6dp"
        android:layout_marginTop="8dp"
        android:background="@drawable/rounded_edittext"
        android:hint="@string/search_hint"
        android:padding="6dp" />

    <TextView
        android:id="@+id/messageTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/messageEditText"
        android:layout_marginLeft="6dp"
        android:layout_marginTop="6dp"
        android:text="@string/current_message" />

    <TextView
        android:id="@+id/locationPermissionTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:text="@string/add_permission"
        android:textColor="@color/colorPrimaryDark"
        android:textSize="24sp" />

    <CheckBox
        android:id="@+id/permissionCheckBox"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:layout_toRightOf="@+id/locationPermissionTextView" />

    <TextView
        android:id="@+id/addLocationTextView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/locationPermissionTextView"
        android:layout_centerInParent="true"
        android:layout_marginTop="10dp"
        android:text="@string/add_location"
        android:textSize="24sp" />

    <ImageView
        android:id="@+id/addLocationButton"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_below="@+id/addLocationTextView"
        android:layout_centerHorizontal="true"
        android:src="@drawable/ic_room_black_24dp" />

    <Button
        android:id="@+id/addGeofence"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@color/colorPrimaryDark"
        android:text="@string/add_geofence"
        android:textColor="@color/colorWhite" />

</RelativeLayout>